--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@supabase/supabase-js": "^2.38.4",
     "git": "^0.1.5",
     "next": "14.0.0",
     "react": "^18",
